--- a/src/components/MapView/MapView.module.css
+++ b/src/components/MapView/MapView.module.css
@@ -17,9 +17,15 @@
   --calcite-color-text-1: white;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 600px) {
   :global(div[slot="top-right"]) :global(calcite-panel) {
     min-width: calc(100vw - 48px - var(--calcite-spacing-lg));
     max-width: calc(100vw - 48px - var(--calcite-spacing-lg));
+    margin-right: 48px;
+    padding-right: 20px;
+    margin-left: 0;
+  }
+  :global(div[slot="bottom-right"]) :global(calcite-panel) {
+    margin-right: 48px;
   }
 }
